--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@ function createPage(article, template){
 			<div class="page">
 				<div class="content">
 					Page
+					<img src="img.jpg" height="100%"/>
 				</div>
 			</div>
 			<div class="page">
