--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@ function createPage(article, template){
 	<!-- XXX add toolbars here... -->
 	<div class="top-toolbar">
 		mooo
+		<div class="button home">Home</div>
 		<div class="button cover">Issue Cover</div>
 		<div class="button prev-article">Prev Article</div>
 		<div class="button next-article">Next Article</div>
