--- a/index.html
+++ b/index.html
@@ -543,6 +543,13 @@ $(document).ready(function(){
 	$('.button.next-article').swipe({click: nextArticle})
 	$('.button.prev-article').swipe({click: prevArticle})
 
+	// XXX STUB: for device debugging reasons...
+	$('.splash')
+		.swipe({click: function(){
+			$('.splash').fadeOut()
+		}})
+
+
 	loadState()
 
 	togglePageView('on')
