--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <script>
 
-var USE_URLS = false
+var USE_URLS = true
 
 /* this is needed only for live resize... */
 var PAGES_VISIBLE = 1
@@ -454,7 +454,7 @@ function prevArticle(){
 // URL state managers...
 function loadURLState(){
 	if(window.location.hash == ''){
-		return 0
+		return null
 	}
 	var n = parseInt(window.location.hash.split('#')[1])
 	if(n != null){
