--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@ $(document).ready(function(){
 				<a href="#prevArticle">Previous article</a><br>
 
 				<div name="example-layer" class="hidden" onclick="window.location.hash='example-layer'" style="position:absolute; left:400px; top:150px; width: 250px; height:50px; text-align: center; padding: 15px; border: solid gray 5px; background: silver; color: white">
-					This is an example
+					This is an example layer<br><br>
+					<i>click or tap to hide</i>
 				</div>
 			</div>
 		</div>
