added pinch/swipe weight to pinch handlers (if pinch is smaller than distance, ignore it)...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@ $(document).ready(function(){
 			},
 
 			pinchIn: function(event, direction, distance, duration, fingerCount, pinchZoom) {
+				if(pinchZoom < distance){
+					return
+				}
 				if(fingerCount == 2){
 					togglePageView('on')
 				}
 			},
 			pinchOut: function(event, direction, distance, duration, fingerCount, pinchZoom) {
+				if(pinchZoom < distance){
+					return
+				}
 				if(fingerCount == 2){
 					togglePageView('off')
 				}
