--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="jquery.touchSwipe.js"></script>
 <script src="jstorage.js"></script>
 
+<script src="jli.js"></script>
 <script src="magazine.js"></script>
 
 <script>
