--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ $(document).ready(function(){
 				return true
 			},
 
+			excludedElements: '.noSwipe',
 			fingers: $.fn.swipe.fingers.ALL
 		})
 
@@ -200,7 +201,6 @@ $(document).ready(function(){
 			<div class="page">
 				<div class="content">
 					<a name="page-3-anchor"></a>
-					Page
 					<img src="img.jpg" height="100%"/>
 				</div>
 			</div>
