--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ $(document).ready(function(){
 				return true
 			},
 
-			excludedElements: '.noSwipe',
+			//excludedElements: '.noSwipe',
 			fingers: $.fn.swipe.fingers.ALL
 		})
 
