--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ $(document).ready(function(){
 				</div>
 
 
-				<div name="example-layer" class="hidden" onclick="window.location.hash='example-layer'" style="position:absolute; left:100px; top:400px; width: 300px; height:50px; text-align: center; padding: 15px; border: solid gray 5px; background: silver; color: white">
+				<div name="example-layer" class="hidden" onclick="window.location='#example-layer'" style="position:absolute; left:100px; top:400px; width: 300px; height:50px; text-align: center; padding: 15px; border: solid gray 5px; background: silver; color: white; cursor: hand">
 					<h3>This is an example layer</h3>
 					<i>click or tap to hide</i>
 				</div>
