--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
 <title>Magazine</title>
+
 <link rel="stylesheet" href="magazine.css">
+<link rel="stylesheet" href="magazine-custom.css">
+
 <script src="jquery.js"></script>
 <script src="jquery.touchSwipe.js"></script>
 <script src="jstorage.js"></script>
